Updated mentors activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Fight Abuse</string>
     <string name="one" />
 
+    <string-array name="accountType">
+        <item>Confirm</item>
+        <item>Cancel</item>
+    </string-array>
+
 
     <string name="sos_info">
 SOS offers our clients access to appropriate emergency assistance when:
