Updated mentors activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
 SOS offers our clients access to appropriate emergency assistance when:
 (a) you don’t know who to call
 (b) you don’t know where you are
-(c) you want to notify your emergency contacts about your emergency and the exact location
-(d) you want your emergency contacts and the emergency services to navigate directly to your location in an emergency.</string>
+(c) you want to notify your emergency contacts about your emergency and the exact location.
+</string>
 
     <string name="bio_info">
 I am a 27 year old female from Pretoria. I have been in an abusive relationship forthe past 5 years. My partner used to physically and emotionally abuse me for the last 3 years .</string>
