--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@ SOS offers our clients access to appropriate emergency assistance when:
 
     <string name="bio_info">
 I am a 27 year old female from Pretoria. I have been in an abusive relationship forthe past 5 years. My partner used to physically and emotionally abuse me for the last 3 years .</string>
+
+    <string name="title_activity_user_testimony">UserTestimonyActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
