--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,8 @@ SOS offers our clients access to appropriate emergency assistance when:
 
     <string name="action_settings">Settings</string>
     <string name="bio">BIO</string>
+    <string name="error_weak_password">Provide a strong password</string>
+    <string name="error_invalid_email">Invalid Emaild or password</string>
+    <string name="error_user_exists">User already exists</string>
 
 </resources>
